--- a/local/config/finna/config.ini.sample
+++ b/local/config/finna/config.ini.sample
@@ -1241,6 +1241,7 @@ Solr = tabs_local
 Primo = tabs_pci
 Combined = tabs_combined
 MetaLib = tabs_metalib
+Digi = tabs_digi
 
 ; Recommendations that include a couple of results from other tabs when doing a
 ; basic search (first result page only).
