[ALLI-4516] Add sort option last indexed.

--- a/local/config/finna/digi.ini.sample
+++ b/local/config/finna/digi.ini.sample
@@ -10,3 +10,4 @@ url = "http://tethys.lib.helsinki.fi"
 relevance = sort_relevance
 main_date_str desc = sort_year
 main_date_str asc = "sort_year asc"
+last_indexed desc = sort_last_indexed
