--- a/local/config/finna/datasources.ini.sample
+++ b/local/config/finna/datasources.ini.sample
@@ -6,6 +6,7 @@
 ; mainView        Main view directory
 ; institution     Institution code
 ; disablePatronFunctions    Set true if datasource does not have patron functionality, can be left out
+; authority       Map to authority index sources
 ;
 ; This configuration file is compatible with RecordManager's datasources.ini, so the
 ; same file can be shared by RecordManager and VuFind.
