Update sample conf.

--- a/local/config/finna/config.ini.sample
+++ b/local/config/finna/config.ini.sample
@@ -1446,3 +1446,7 @@ enabled = 1
 ; Version of the terms of service. A new acceptance is required if the version is
 ; updated.
 version = 1
+
+; Authority info
+[Authority]
+enabled = true
