Initial EAD3 and EAC-CPF support with authority info.

--- a/local/config/finna/config.ini.sample
+++ b/local/config/finna/config.ini.sample
@@ -1452,3 +1452,9 @@ en-gb['FREE ACCESS - NO-REUSE'] = "http://www.europeana.eu/portal/rights/rr-f.ht
 [FinnaSurvey]
 enabled = false
 url = "https://my.surveypal.com/Finnasurvey"
+
+; Authority info
+[Authority]
+; Authority support is disabled by default. Uncomment the following line to enable
+; it.
+;enabled = true
