--- a/local/config/finna/searchspecs.yaml.sample
+++ b/local/config/finna/searchspecs.yaml.sample
@@ -445,3 +445,13 @@ PublicationPlace:
     publication_place_txt_mv:
       - [and, 100]
       - [or, ~]
+
+AuthorId:
+  QueryFields:
+    author_id_str_mv:
+      - [or, ~]
+
+CorporateAuthorId:
+  QueryFields:
+    author_corporate_id_str_mv:
+      - [or, ~]
