--- a/local/config/finna/KohaRest.ini.sample
+++ b/local/config/finna/KohaRest.ini.sample
@@ -1,3 +1,7 @@
+[Parent_Config]
+relative_path = ../finna/KohaRest_common.ini
+override_full_sections = "UpdateAddress"
+
 [Catalog]
 ; An optional catalog id that is used in the translation string when translating
 ; location names and opac messages (e.g. location_{id}_ADU)
@@ -5,24 +9,11 @@ id = "outi"
 ; URL of the Koha Rest API without the version
 host = "http://koha-server/api"
 
-[FeeTypeMappings]
-FU = "Accrued Fine"
-ODUE = "Overdue"
-
 [Holds]
-; HMACKeys - A list of hold form element names that will be analyzed for consistency
-; during hold form processing. Most users should not need to change this setting.
-HMACKeys = item_id:holdtype:level
-
 ; defaultRequiredDate - A colon-separated list used to set the default "not required
 ; after" date for holds in the format days:months:years
 ; e.g. 0:1:0 will set a "not required after" date of 1 month from the current date
 defaultRequiredDate = 0:0:2
-
-; extraHoldFields - A colon-separated list used to display extra visible fields in the
-; place holds form. Supported values are "requiredByDate", "pickUpLocation" and
-; "acceptTerms"
-extraHoldFields = requiredByDate:pickUpLocation
 
 ; A Pick Up Location Code used to pre-select the pick up location drop down list and
 ; provide a default option if others are not available. Must be one of the following:
@@ -37,7 +28,7 @@ defaultPickUpLocation = ""
 ;pickUpLocationOrder = 158:155
 
 ; This setting can be used to exclude locations from the pickup location list
-excludePickupLocations = 1:6:10:15:29:32:34:37:38:39:53:79:87:88
+;excludePickupLocations = 1:6:10:15:29:32:34:37:38:39:53:79:87:88
 
 ; Optional help texts that can be displayed on the hold form
 ;helpText = "Help text for all languages."
@@ -46,100 +37,6 @@ excludePickupLocations = 1:6:10:15:29:32:34:37:38:39:53:79:87:88
 ; Optional label for the "acceptTerms" extra field
 ;acceptTermsText = "I accept the terms in any language."
 ;acceptTermsText[en-gb] = "I accept the terms in English."
-
-; Changing of pickup location is enabled if method parameter is set. Only valid value
-; is 'driver'.
-[changePickupLocation]
-method = driver
-
-; Changing of hold status is enabled if method parameter is set. Only valid value
-; is 'driver'.
-[changeRequestStatus]
-method = driver
-
-[TransactionHistory]
-; By default the loan history is disabled. Uncomment the following line to enable it.
-enabled = true
-
-; Changing of loan history state is enabled if method parameter is set. Only
-; valid value is 'driver'.
-[updateTransactionHistoryState]
-method = driver
-;description[fi] = ""
-;description[sv] = ""
-;description[en-gb] = ""
-options[0] = loan_history_forever
-options[1] = loan_history_default
-options[2] = loan_history_never
-
-; Changing of messaging settings is enabled if method parameter is set. Only valid
-; value for Koha is 'driver'.
-[updateMessagingSettings]
-method = driver
-
-; Changing of SMS alert number is enabled if method parameter is set. Only valid
-; value for Koha is 'driver'.
-[updateSmsNumber]
-method = driver
-; Link the SMS number to the following Koha fields (default is smsalertnumber):
-;fields = "smsalertnumber,phone"
-
-; Due date reminder settings
-[dueDateReminder]
-; By default due date reminder is disabled in Finna since the ILS does the job
-enabled = false
-
-; Uncomment the following lines to enable password (PIN) change
-[changePassword]
-; PIN change parameters. The default limits are taken from the interface documentation.
-minLength = 4
-maxLength = 4
-; See the password_pattern/password_hint settings in the [Authentication] section
-; of config.ini for notes on these settings. When set here, these will override the
-; config.ini defaults when Voyager is used for authentication.
-pattern = "numeric"
-;hint = "Your optional custom hint can go here."
-
-[Profile]
-; The field to display as the phone number. Empty string for "none".
-;phoneNumberField = "phone"
-
-; Uncomment the following lines to enable updating of address information.
-; Choose a method on how to update the address information (driver, email or url).
-[updateAddress]
-;method = driver
-; emailAddress is required for the email method
-;emailAddress =
-; Uncomment the following lines to change which fields are included in the form
-; when using the email method. Format for the fields is label:profile_field
-; Default is address, zip, city and country. Email and phone are included unless
-; they have their own sections [updateEmail] or [updatePhone] defined. Also custom
-; fields can be defined.
-;fields[] = Address:address
-;fields[] = Zip:zipcode
-;fields[] = City:city
-;fields[] = Country:country
-;fields[] = Email:email
-;fields[] = Hold Identifier:othernames
-; url is required for the url method. url can be a single address or an array of
-; language-specific addresses. First example is a single one:
-;url = http://address.of.change.form
-; Alternatively different links can be specified for each language:
-;url[fi] = http://address.of.change.form/finnish
-;url[sv] = http://address.of.change.form/swedish
-;url[en-gb] = http://address.of.change.form/english
-
-; Uncomment the following lines to enable updating of email address.
-; Choose a method on how to update the email address.
-; Only 'driver' is currently supported.
-[updateEmail]
-method = driver
-
-; Uncomment the following lines to enable updating of phone number.
-; Choose a method on how to update the phone number.
-; Only 'driver' is currently supported.
-[updatePhone]
-;method = driver
 
 [Holdings]
 ; Whether item-specific hold counts are displayed
@@ -162,11 +59,6 @@ summary = "863abiz:866az"
 supplements = "867az"
 ; Fields to include in indexes. Default is none.
 indexes = "868az"
-
-; This section allows modification of the default mapping from item status codes to
-; VuFind item statuses
-[ItemStatusMappings]
-Item::Waiting = "On Hold"
 
 [onlinePayment]
 ; Whether online payment is enabled. Default is false.
