[ALLI-5588] KohaRest: Add an option to display home branch instead of holding branch in holdings.

--- a/local/config/finna/KohaRest.ini.sample
+++ b/local/config/finna/KohaRest.ini.sample
@@ -59,6 +59,8 @@ summary = "863abiz:866az"
 supplements = "867az"
 ; Fields to include in indexes. Default is none.
 indexes = "868az"
+; Whether to display home branch instead of holding branch. Default is false.
+;use_home_branch = true
 
 [onlinePayment]
 ; Whether online payment is enabled. Default is false.
