--- a/local/config/finna/config.ini.sample
+++ b/local/config/finna/config.ini.sample
@@ -1101,11 +1101,13 @@ hide_holdings[] = "World Wide Web"
 ;
 ; Available options:
 ;    Editions - Alternate editions (in the Solr index) based on WorldCat lookup
+;    RelatedItems - Related records based on RecordDriver metadata
 ;    Similar - Similarity based on Solr lookup
 ;    SimilarDeferred - Like Similar but asynchronous
 ;    WorldCatEditions - Alternate editions (in the WorldCat index) based on WorldCat
 ;        lookup
 ;    WorldCatSimilar - Similarity based on WorldCat lookup
+related[] = "RelatedItems"
 related[] = "SimilarDeferred"
 
 ; Presenter roles that are displayed separately from other authors
