--- a/local/config/finna/KohaRest.ini.sample
+++ b/local/config/finna/KohaRest.ini.sample
@@ -51,6 +51,8 @@ display_full_call_number = true
 display_title_hold_in_results = true
 ; Whether to use holding records
 use_holding_records = true
+; Whether to group holdings by location in addition to branch. Default is false.
+;group_by_location = true
 ; Fields to include in notes. Default is "852z".
 notes = "506au:845a:852z"
 ; Fields to include in summary. Default is "866a".
